ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: everlyhealth
spec:
  rules:
    - host: takehomeapp.local.192.168.49.2.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  name: http
    - host: gitea.local.192.168.49.2.nip.io
      http:
        paths:
          - path: /gitea(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: gitea
                port:
                  name: giteaport
